--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "easymde": "^2.20.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
@@ -29,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.87.1",
+    "sanity-plugin-markdown": "^5.1.0",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
