--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@sanity/client": "^6.29.1", 
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.1",
     "@tailwindcss/typography": "^0.5.16",
@@ -29,7 +30,7 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
-    "next-sanity": "^9.8.58-canary.0",
+    "next-sanity": "^9.8.0", 
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.87.1",
