--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@sanity/client": "^6.29.1", 
+    "@sanity/client": "^6.29.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.87.1",
     "@tailwindcss/typography": "^0.5.16",
@@ -30,11 +30,12 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
-    "next-sanity": "^9.8.0", 
+    "next-sanity": "^9.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.87.1",
     "sanity-plugin-markdown": "^5.1.0",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
