--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "easymde": "^2.20.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.503.0",
+    "markdown-it": "^14.1.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
     "next-sanity": "^9.8.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
