--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sanity": "^3.87.1",
     "sanity-plugin-markdown": "^5.1.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
